# COBEY-DB-API

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  database.py  example_usage.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_main.py
app/: __init__.py  config.py  models.py
app/api/: __init__.py  sessions.py
app/api/routes/: __init__.py  session.py
app/cli/: schema.py
app/db/: __init__.py  connection.py  crud_operations.py  models.py  session.py
app/schemas/: __init__.py  base.py  models.py  sessions.py
app/sql/: test_query.sql
app/utils/: __init__.py  migration.py  schema_docs.py  ssh.py
backendapi.egg-info/: PKG-INFO  SOURCES.txt
docs/: openapi.json  redoc.html  swagger.html
examples/: basic_usage.py  example_usage.py  workout_api_client.py
scripts/: common_sql.py  export_docs.py  generate_models.py  migrate.py  reset_and_migrate.py  update_inits.py
src/: __init__.py  main.py
src/api/: __init__.py  dependencies.py
src/api/routes/: __init__.py  crud_routes.py  health.py  sessions.py
src/api/utils/: crud_router.py  health.py  responses.py  validation.py
src/core/: __init__.py  config.py  json.py  logging.py
src/db/: __init__.py  connection.py  introspection.py  models.py
src/db/migrations/: manager.py
src/db/migrations/versions/: 001_create_users_table.sql  002_create_recordings_table.sql  __init__.py  (+3 more)
src/db/queries/: __init__.py  builder.py  executor.py
src/models/: __init__.py  algos.py  dynamic.py  event_log.py  mapping.py  recordings.py  sessions.py  users.py
tests/: conftest.py
